for you category for exercises, layout issues, background colour

--- a/app/assets/stylesheets/components/_exercises.scss
+++ b/app/assets/stylesheets/components/_exercises.scss
@@ -34,7 +34,7 @@
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 6px 12px;
+  // padding: 6px 12px;
   border-top: none;
   justify-content:space-between;
 }
