--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,7 +6,7 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 white;
+$body-bg:                 #F8F8FF;
 $font-size-base: 1rem;
 
 // Colors
@@ -32,4 +32,4 @@ $modal-content-color:           $black, !default;
 // $('#myModal').on('shown.bs.modal', function () {
 //   $('#myInput').trigger('focus')
 // })
-$body-bg:                 #fff !default;
+$body-bg:                #F8F8FF !default;
