--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,6 +8,6 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-$ruekmalbg: #FFF9EE;
+$ruekmalbg: #eaf4f4;
 $ruekmaldarkblue: #00193C;
-$ruekmallightgreen :#B1EA9A
+$ruekmallightgreen :#9db8a3
